r21 (04. 08. 2021):
Added Waypoints
Added trackers for ECM Jammer and ECM Feedback
Added "Aggregate All Deployables" tracker
Added moving animation for trackers
Added fade in animation for new trackers
Added fade out animation for trackers that are going to be deleted
Added trackers for Crime and Punishment custom heist
All Holdout maps (Vanilla and custom) should be supported out of the box
Fixed an issue where PEOC Mainframe from The White House or Buluc's Mansion removed tracker when paused
HoloUI: Fixed an issue where tracker edges were visible in the heist end screen

r20 (20. 07. 2021):
Fixed a crash when a mission did not have a "heat system" set up

r19 (18. 07. 2021):
Added Russian translation
Optimized getting icons for trackers
Optimized calling of delayed elements
Improved some timed achievements so they will appear when you drop-in
Fixed an issue where single grenade cases were not counted correctly
Big Oil Day 1: Fixed an issue where achievement "A Junkyard Full Of Junkies" did not blink green when achieved
Green Bridge: Fixed an issue where synced plane tracker showed as inaccurate tracker
Mallcrasher: Added tracker for achievement "Shoot the Glass!"
No Mercy: Elevator timer will show up when you drop-in
Ukrainian Job: Fixed an issue where achievement "I'm Sure No One Heard That" was visible when metal detectors were not in the store

r18 (25. 06. 2021):
Greatly improved accuracy of timed trackers on client
Fixed a crash when a player went to custody and "Trade Delay" tracker was not visible
First World Bank: Fixed an issue where Thermite timer did not update correctly
XP Tracker: Improved formatting

r17 (24. 06. 2021):
Fixed a crash after alarm went off when "Trade Delay Tracker" is not enabled

r16 (23. 06. 2021):
Added option "Text Scale"
Trade Delay Tracker: Fixed an issue where the tracker could get wonky when related settings were changed mid-game